[GTK] Media and audio permission request unit tests are timing out https://bugs.webkit.org/show_bug.cgi?id=158257

Patch by Philippe Normand <pnormand@igalia.com> on 2020-05-11
Reviewed by Carlos Garcia Campos.

Source/WebKit:

Add new private API to disable secure capture device contexts.
This is needed for the API tests.

* UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewSetMediaCaptureRequiresSecureConnection):
* UIProcess/API/glib/WebKitWebViewPrivate.h:

Tools:

Fix getUserMedia glib tests. They require unsecure capture device context.

* TestWebKitAPI/Tests/WebKitGLib/TestUIClient.cpp:
(testWebViewUserMediaEnumerateDevicesPermissionCheck):
(testWebViewUserMediaPermissionRequests):
(testWebViewAudioOnlyUserMediaPermissionRequests):
* TestWebKitAPI/glib/TestExpectations.json:

Canonical link: https://commits.webkit.org/224619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261473 268f45cc-cd09-0410-ab3c-d52691b4dbfc